--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,21 +21,17 @@ jobs:
 
       - name: Set up environment-specific .env file
         run: echo "${{ secrets.ENV_FILE }}" > .env
+
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
 
-      - name: Set up Docker Buildx
+      - name: Build and Push Docker Image
         run: |
-          docker buildx create --use
-          docker buildx inspect --bootstrap
-
-      - name: Build, Push Docker Image, and Cache
-        run: |
+          docker buildx create --use || true
           docker buildx build \
-            --cache-to type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME }}-cache \
-            --cache-from type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME }}-cache \
             --tag ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME }}:latest \
-            --push .
+            --push \
+            --build-arg APP_ENV=${{ env.APP_ENV }} .
 
       - name: Deploy to AWS
         uses: appleboy/ssh-action@v1.0.3
@@ -44,12 +40,11 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            sudo mkdir -p ~/fastapi-docker
-            cd ~/fastapi-docker
-
             sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME }}:latest
 
             sudo docker stop fastapi || true
             sudo docker rm fastapi || true
 
             sudo docker run -d --name fastapi --env-file .env ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME }}:latest
+
+            sudo docker ps
