--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,22 +11,12 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
 
-    env:
-      APP_ENV: development
-      DOCKER_BUILDKIT: 1
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Set up environment-specific .env file
         run: echo "${{ secrets.ENV_FILE }}" > .env
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -40,13 +30,13 @@ jobs:
           context: .
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME }}:latest
-          cache-from: |
-            type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME }}-cache
-            type=local,src=/tmp/cache
-          cache-to: |
-            type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME }}-cache,mode=max
-            type=local,dest=/tmp/cache
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
 
+      - name: Move cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
       - name: Deploy to AWS
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -54,7 +44,15 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
+            echo "Pulling the latest Docker image..."
             sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME }}:latest
+
+            echo "Stopping and removing old container if exists..."
             sudo docker stop fastapi || true
             sudo docker rm fastapi || true
+
+            echo "Running new container..."
             sudo docker run -d --name fastapi --env-file .env ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME }}:latest
+
+            echo "Listing running containers..."
+            sudo docker ps
