--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,6 +14,20 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        id: checkout
+
+      - name: Check if Dockerfile or docker-compose.yml changed
+        id: check-changes
+        run: |
+          git fetch origin main
+          git diff --name-only HEAD $(git merge-base HEAD origin/main) > changes.txt
+          if grep -qE 'Dockerfile|docker-compose.yml' changes.txt; then
+            echo "Dockerfile or docker-compose.yml changed"
+            echo "needs_build=true" >> $GITHUB_ENV
+          else
+            echo "No changes in Dockerfile or docker-compose.yml"
+            echo "needs_build=false" >> $GITHUB_ENV
+          fi
 
       - name: Set up environment-specific .env file
         run: echo "${{ secrets.ENV_FILE }}" > .env
@@ -25,6 +39,7 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
       - name: Build and Push Docker Image
+        if: env.needs_build == 'true'
         uses: docker/build-push-action@v4
         with:
           context: .
@@ -41,13 +56,12 @@ jobs:
             echo "Pulling the latest Docker image..."
             sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME }}:latest
 
-            echo "Stopping and removing old containers and networks..."
-            sudo docker compose down
+            echo "Stopping and removing old container if exists..."
+            sudo docker stop fastapi || true
+            sudo docker rm fastapi || true
 
-            echo "Starting new containers with the latest image..."
-            sudo docker compose up -d --build
+            echo "Running new container..."
+            sudo docker run -d --name fastapi --env-file .env ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME }}:latest
 
             echo "Listing running containers..."
             sudo docker ps
-
-            echo "Deployed successfully!"
