--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,15 +2,15 @@ version: '3.8'
 
 services:
   app:
-    image: kojiakbar2806/fastapi_app:latest  # Docker Hub-dan imidj
+    image: kojiakbar2806/fastapi_app:latest 
     container_name: fastapi
     ports:
-      - "8000:8000"  # Hostdagi port:Container port
+      - "8000:8000" 
     env_file:
-      - .env  # Muhit o'zgaruvchilari
+      - .env 
     volumes:
-      - .:/app  # Loyiha papkasini konteynerga ulash
-    restart: always  # Konteynerni qayta ishga tushirish qoidalari
+      - .:/app 
+    restart: always 
     depends_on:
       - db
       - redis
@@ -18,7 +18,7 @@ services:
       bash -c "alembic upgrade head && gunicorn main:app --workers=4 --worker-class=uvicorn.workers.UvicornWorker --bind=0.0.0.0:8000"
 
   db:
-    image: postgres:latest  # Postgres imidji
+    image: postgres:latest  
     container_name: postgres
     ports:
       - "${DB_PORT}:5432"
@@ -31,7 +31,7 @@ services:
       - ./postgres_data:/var/lib/postgresql/data
 
   redis:
-    image: redis:latest  # Redis imidji
+    image: redis:latest  
     container_name: redis
     ports:
       - "${REDIS_PORT}:6379"
