--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -46,19 +46,11 @@ jobs:
             set -e
             set -x
 
-            echo "Pulling the latest Docker image..."
             sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME }}:latest
 
-            echo "Checking out latest code..."
             cd ~/fastapi-docker
             git pull origin main
-
-            echo "Stopping and removing the old fastapi container if exists..."
-            sudo docker compose stop fastapi
-            sudo docker compose rm -f fastapi
-
-            echo "Running the new fastapi container..."
-            sudo docker compose up -d --no-deps --build fastapi
-
-            echo "Listing running containers..."
+            sudo docker compose stop app
+            sudo docker compose rm -f app
+            sudo docker compose up -d --no-deps --build app
             sudo docker ps
