--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ http {
 
     server {
         listen 80;
-        server_name example.com;  # Sizning domeningiz yoki IP-manzilingiz
+        server_name 13.61.33.56;  # Sizning domeningiz yoki IP-manzilingiz
 
         location / {
             # Cache sozlamalari
