--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -50,11 +50,13 @@ jobs:
 
             git pull origin main
 
-            sudo docker compose stop app
-            sudo docker compose rm -f app
+            sudo docker compose up -d --build
 
-            sudo docker compose up -d --no-deps --build app
+            # sudo docker compose stop app
+            # sudo docker compose rm -f app
 
-            sudo docker ps
+            # sudo docker compose up -d --no-deps --build app
 
-            sudo docker image prune -f
+            # sudo docker ps
+
+            # sudo docker image prune -f
