--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -40,10 +40,7 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            set -e
-            set -x
-
+          script: |-
             sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME }}:latest
 
             cd ~/fastapi-docker
@@ -52,11 +49,11 @@ jobs:
 
             sudo docker compose up -d --build
 
-            # sudo docker compose stop app
-            # sudo docker compose rm -f app
+            sudo docker compose stop app
+            sudo docker compose rm -f app
 
-            # sudo docker compose up -d --no-deps --build app
+            sudo docker compose up -d --no-deps --build app
 
-            # sudo docker ps
+            sudo docker ps
 
-            # sudo docker image prune -f
+            sudo docker image prune -f
