--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -49,11 +49,11 @@ jobs:
 
             sudo docker compose up -d --build
 
-            sudo docker compose stop app
-            sudo docker compose rm -f app
+            # sudo docker compose stop fastapi
+            # sudo docker compose rm -f fastapi
 
-            sudo docker compose up -d --no-deps --build app
+            # sudo docker compose up -d --no-deps --build fastapi
 
-            sudo docker ps
+            # sudo docker ps
 
-            sudo docker image prune -f
+            # sudo docker image prune -f
