--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,12 +8,8 @@ services:
       - .env
     volumes:
       - .:/app
-    restart: always
-    depends_on:
-      - db
-      - redis
     command: >
-      bash -c "alembic upgrade head && gunicorn main:app --workers=4 --worker-class=uvicorn.workers.UvicornWorker"
+      bash -c "alembic upgrade head && gunicorn main:app --workers=4 --worker-class=uvicorn.workers.UvicornWorker --bind 0.0.0.0:8000"
 
   db:
     image: postgres:latest
@@ -24,7 +20,6 @@ services:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASS}
       POSTGRES_DB: ${DB_NAME}
-    restart: always
     volumes:
       - ./postgres_data:/var/lib/postgresql/data
 
@@ -33,4 +28,3 @@ services:
     container_name: redis
     ports:
       - "6379:6379"
-    restart: always
