--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,10 +8,12 @@ services:
       - .env
     volumes:
       - .:/app
-    command: >
-      bash -c "alembic upgrade head && gunicorn main:app --workers=4 --worker-class=uvicorn.workers.UvicornWorker --bind 0.0.0.0:8000"
+    depends_on:
+      - postgres
+      - redis
 
-  db:
+
+  postgres:
     image: postgres:latest
     container_name: postgres
     ports:
