--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,37 @@
-pyjwt[crypto]==2.9.0
-sqlalchemy[asyncio]==2.0.32
-asyncpg==0.29.0
-alembic==1.13.2
-pydantic-settings==2.4.0
-bcrypt==4.2.0
-fastapi[standart]==0.112.0
-uvicorn==0.30.5
 aiosqlite==0.20.0
+alembic==1.13.2
+annotated-types==0.7.0
+anyio==4.4.0
+asyncpg==0.29.0
+bcrypt==4.2.0
+cffi==1.17.0
+click==8.1.7
+cryptography==43.0.0
+distlib==0.3.8
+Faker==27.0.0
+fastapi==0.112.0
+filelock==3.15.4
+greenlet==3.0.3
+gunicorn==23.0.0
+h11==0.14.0
+idna==3.7
+libusb1==3.1.0
+Mako==1.3.5
+MarkupSafe==2.1.5
+packaging==24.1
+platformdirs==4.2.2
+pycparser==2.22
+pydantic==2.8.2
+pydantic-settings==2.4.0
+pydantic_core==2.20.1
+PyJWT==2.9.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
-gunicorn==23.0.0
+six==1.16.0
+sniffio==1.3.1
+SQLAlchemy==2.0.32
+starlette==0.37.2
+typing_extensions==4.12.2
+uvicorn==0.30.5
+virtualenv==20.26.3
