--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,15 +14,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Set up environment-specific .env file
+        run: echo "${{ secrets.ENV_FILE }}" > .env
+
+      - name: Build Docker Image
+        run: docker build --no-cache -t ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME }}:latest .
+
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
 
-      - name: Build and push
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME }}:latest
+      - name: Push Docker Image
+        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME }}:latest
 
       - name: Deploy to AWS
         uses: appleboy/ssh-action@v1.0.3
@@ -35,8 +37,10 @@ jobs:
 
             cd ~/fastapi-docker
 
-            echo "${{ secrets.ENV_FILE }}" | sed 's/ /\n/g' > .env
-
             git pull origin main
-            docker-compose up -d --no-deps fastapi
+
+            sudo docker compose rm -f fastapi
+            
+            sudo docker compose up --no-depth fastapi
+
             sudo docker image prune -f
